--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,25 +1,27 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
+ * This is a manifest file that'll automatically include all the stylesheets available in this directory
+ * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
+ * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
- //= require material_icons
- */
-@import "materialize/components/color";
-$primary-color: color("light-green", "darken-1") !default;
-@import "materialize";
+ *= require nprogress
+ *= require nprogress-bootstrap
+ *= require_tree .
+ *= require material_icons
+*/
+
+$nprogress-color: #dddddd;
+$nprogress-height: 10px;
+$nprogress-zindex: 10100;
+
+@import 'nprogress';
+@import 'nprogress-bootstrap';
 
 .container {
-  margin: 0 auto;
-  max-width: 800px;
-  width: 90%;
+  width: 760px !important;
+}
+
+input#survey_title {
+  font-size: xx-large;
+  font-weight: 400;
+  height: 50px;
 }
