--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,19 +1,26 @@
-<div class="row">
-  <nav>
-    <div class="nav-wrapper">
-      <div class="col s12">
-        <a href="#!" class="brand-logo">insightful</a>
-        <ul class="right hide-on-med-and-down">
-          <li><%= link_to 'Survey', surveys_path %> </li>
-          <li>
-            <% if user_signed_in? %>
-              <%= link_to 'Logout', destroy_user_session_path, :method => :delete %>
-            <% else %>
-              <%= link_to 'Login', new_user_session_path %>
-            <% end %>
-          </li>
-        </ul>
-      </div>
+<div class="navbar navbar-material-light-green">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="javascript:void(0)">insightful</a>
     </div>
-  </nav>
+    <div class="navbar-collapse collapse navbar-responsive-collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><%= link_to 'Survey', surveys_path %> </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <% if user_signed_in? %>
+            <%= link_to 'Logout', destroy_user_session_path, :method => :delete %>
+          <% else %>
+            <%= link_to 'Login', new_user_session_path %>
+          <% end %>
+        </li>
+      </ul>
+    </div>
+  </div>
 </div>
