--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@survey) do |f| %>
+<%= form_for(@survey, html: {class: 'form-horizontal'}) do |f| %>
   <% if @survey.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@survey.errors.count, "error") %> prohibited this survey from being saved:</h2>
@@ -11,31 +11,47 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+  <div class="form-group">
+    <div class="col-lg-12">
+      <%= f.text_field :title, class: 'form-control', placeholder: :Title %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
+
+  <div class="form-group">
+    <div class="col-lg-12">
+      <%= f.text_field :description, class: 'form-control', placeholder: :Description %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
+
+  <%= f.fields_for :questions do |builder| %>
+    <%= render "question_fields", :f => builder %>
+  <% end %>
+
+  <div class="form-group">
+    <div class="col-lg-12">
+      <div class="checkbox">
+        <label>
+          <%= f.check_box :public %> Public
+        </label>
+      </div>
+
+      <div class="checkbox">
+        <label>
+          <%= f.check_box :require_login %> Require login
+        </label>
+      </div>
+
+      <div class="checkbox">
+        <label>
+          <%= f.check_box :answer_is_editable %> Answer is editable
+        </label>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :public %><br>
-    <%= f.check_box :public %>
-  </div>
-  <div class="field">
-    <%= f.label :require_login %><br>
-    <%= f.check_box :require_login %>
-  </div>
-  <div class="field">
-    <%= f.label :answer_is_editable %><br>
-    <%= f.check_box :answer_is_editable %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="form-group">
+    <div class="col-lg-12">
+      <%= f.button class: "btn btn-primary waves-effect" %>
+    </div>
   </div>
 <% end %>
