--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Survey</h1>
-
-<%= render 'form' %>
+<div class="row">
+  <div class="col s12 m12 l12">
+    <div class="section">
+      <div class="row">  
+        <%= render 'form' %>
+      </div>
+    </div>
+  </div>
+</div>
 
 <%= link_to 'Show', @survey %> |
 <%= link_to 'Back', surveys_path %>
