add sankey & stacked bars

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,20 +3,17 @@
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
+ *= require selectize
+ *= require selectize.default
  *= require bootstrap
  *= require bootstrap-material-design
- *= require nprogress
- *= require nprogress-bootstrap
  *= require material_icons
  *= require_tree .
 */
 
-$nprogress-color: #dddddd;
-$nprogress-height: 2px;
-$nprogress-zindex: 10100;
+$nprogress-color: #fff;
 
 @import 'nprogress';
-@import 'nprogress-bootstrap';
 
 .container {
   width: 760px !important;
