--- a/app/views/data/_form.html.erb
+++ b/app/views/data/_form.html.erb
@@ -26,6 +26,35 @@
     <p class="help-block">Will be overridden with the content of the <code>file</code> above if applicable.</p>
   </div>
 
+  <% if params[:action] == "edit" %>
+      <%= f.hidden_field :ignored, class: "form-control", hidden: true %>
+    <div class="form-group">
+      <%= f.label :ignore, class: "control-label" %>
+      <%= select_tag :select, options_for_select([nil]+eval(@datum.headers)), class: "form-control", onchange: "update(this)" %>
+      <p class="help-block">Values of selected properties will be ignored in processing.</p>
+    </div>
+
+    <script>
+      var $select = null;
+      $(document).ready(function() {
+        $select = $("#select").selectize({
+          maxItems:<%= eval(@datum.headers).count %>,
+          items: JSON.parse($("#datum_ignored").val() || [])
+        });
+      })
+
+      var update = function(el) {
+        $("#datum_ignored").val(JSON.stringify($(el).val() || []));
+        console.log($("#datum_ignored").val())
+      }
+    </script>
+
+    <div class="form-group label-static is-empty">
+      <%= f.label :types, class: "control-label" %>
+      <%= f.text_field :types, class: "form-control" %>
+    </div>
+  <% end %>
+
   <div class="form-group">
     <%= f.button class: "btn btn-primary waves-effect" %>
   </div>
