--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -18,6 +18,7 @@
       <div class="bs-component">
         <%= link_to 'JSON', datum_path(@datum, format: :json), target: :blank, class: "btn btn-info" %>
         <%= link_to 'Sankey', sankey_datum_path(@datum), class: "btn btn-info" %>
+        <%= link_to 'Stacked bars', stacked_bars_datum_path(@datum), class: "btn btn-info" %>
       </div>
 
       <div class="bs-component">
