--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,7 +5,7 @@
 
   <div class="form-group label-placeholder is-empty">
     <%= f.label :email, class: "control-label" %>
-    <%= f.email_field :email, autofocus: true, class: "form-control" %>
+    <%= f.email_field :email, autofocus: true, class: "form-control active" %>
     <span class="material-input"></span>
   </div>
 
@@ -44,6 +44,4 @@
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "You are about to cancel your account. Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
