added normalized stacked bar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,9 +15,9 @@ $nprogress-color: #fff;
 
 @import 'nprogress';
 
-.container {
+/*.container {
   width: 760px !important;
-}
+}*/
 
 .breadcrumb > li {
   padding-right: 5px;
