--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -7,12 +7,7 @@
 
       <p>
         <strong>Item:</strong>
-        <pre><%= @headers %></pre>
-      </p>
-
-      <p>
-        <strong>Count:</strong>
-        <pre><%= @items.count %></pre>
+        <pre><%= @datum.heads %></pre>
       </p>
 
       <div class="bs-component">
