--- a/app/views/data/_form.html.erb
+++ b/app/views/data/_form.html.erb
@@ -39,19 +39,19 @@
       $(document).ready(function() {
         $select = $("#select").selectize({
           maxItems:<%= eval(@datum.headers).count %>,
-          items: JSON.parse($("#datum_ignored").val() || [])
+          items: JSON.parse($("#datum_ignored").val() || '[]')
         });
       })
 
       var update = function(el) {
-        $("#datum_ignored").val(JSON.stringify($(el).val() || []));
+        $("#datum_ignored").val(JSON.stringify($(el).val() || '[]'));
         console.log($("#datum_ignored").val())
       }
     </script>
 
     <div class="form-group label-static is-empty">
-      <%= f.label :types, class: "control-label" %>
-      <%= f.text_field :types, class: "form-control" %>
+      <%= f.label :numbers, class: "control-label" %>
+      <%= f.text_field :numbers, class: "form-control" %>
     </div>
   <% end %>
 
