--- a/app/views/data/draw/sankey.html.erb
+++ b/app/views/data/draw/sankey.html.erb
@@ -49,7 +49,7 @@
 <div class="form-group">
   <label for="select">Select</label>
   <select id="select" class="form-control">
-    <option disabled selected> -- select an option -- </option>
+    <option disabled selected> loading... </option>
   </select>
 </div>
 
@@ -187,25 +187,28 @@
         graph.links.push(link);
       }
     }
-    
+    var time = new Date().getTime()
+    console.log("start")
     for (var i = items.length - 1; i >= 0; i--) {
       var item = items[i];
 
       for (var j = 0; j < loop; j++) {
         var ff = graph.nodes[j];
-
-        for (var k = j; k < loop; k++) {
-          var tt = graph.nodes[k];
-          if(ff.header == tt.header) continue;
-          if(item[ff.header] == ff.name && item[tt.header] == tt.name){
-            if (item["Freq"] != undefined)
-              graph.links[j*loop+k].value += parseInt(item["Freq"]);
-            else graph.links[j*loop+k].value++;
-            delete item[ff.header]
+        if(item[ff.header] == ff.name){
+          for (var k = j; k < loop; k++) {
+            var tt = graph.nodes[k];
+            if(ff.header == tt.header) continue;
+            if(item[ff.header] == ff.name && item[tt.header] == tt.name){
+              if (item["Freq"] != undefined)
+                graph.links[j*loop+k].value += parseInt(item["Freq"]);
+              else graph.links[j*loop+k].value++;
+              delete item[ff.header]
+            }
           }
         }
       }
     }
+    console.log(new Date().getTime() - time)
 
     for (var i = graph.links.length - 1; i >= 0; i--) {
       if (graph.links[i].value == 0) {
