--- a/app/views/data/draw/bilevel_partition.html.erb
+++ b/app/views/data/draw/bilevel_partition.html.erb
@@ -64,7 +64,7 @@
     </div>
   </div>
 </div>
-  <pre id="json"></pre>
+  <!-- <pre id="json"></pre> -->
 
 <script>
   var data, levels, measure = 'false';
@@ -116,7 +116,7 @@
 
     if (valid)
       processData(levels, measure, function(processedData){
-        $("#json").html(JSON.stringify(processedData, undefined, 2))
+        // $("#json").html(JSON.stringify(processedData, undefined, 2))
         var values = [];
         $.each(levels, function(k, v) {values = values.concat(data["values"][v])});
         createVisualization(processedData, values);
@@ -125,6 +125,7 @@
 
   var reset = function() {
     $("#chart").html("")
+    $("#sequence").html("")
   }
 
   var processData = function(levels, measure, callback) {
@@ -255,8 +256,13 @@ function createVisualization(json, values) {
       .attr("d", arc)
       .attr("fill-rule", "evenodd")
       .style("fill", function(d) { return color(d.name); })
-      .style("opacity", 1)
+      .style("opacity", .5)
       .on("mouseover", mouseover);
+
+  d3.selectAll("path")
+      .transition()
+      .duration(500)
+      .style("opacity", 1);
 
   // Add the mouseleave handler to the bounding circle.
   d3.select("#container").on("mouseleave", mouseleave);
@@ -307,7 +313,7 @@ function createVisualization(json, values) {
     // Transition each segment to full opacity and then reactivate it.
     d3.selectAll("path")
         .transition()
-        .duration(1000)
+        .duration(500)
         .style("opacity", 1)
         .each("end", function() {
                 d3.select(this).on("mouseover", mouseover);
