Sunburst changed to zoomable and sequence
bilevel-partition is renamed to sunburst

--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -15,7 +15,7 @@
         <%= link_to 'Sankey', sankey_datum_path(@datum), class: "btn btn-info" %>
         <%= link_to 'Stacked bar', stacked_bar_datum_path(@datum), class: "btn btn-info" %>
         <%= link_to 'Normalized stacked bar', normalized_stacked_bar_datum_path(@datum), class: "btn btn-info" %>
-        <%= link_to 'Bilevel partition', bilevel_partition_datum_path(@datum), class: "btn btn-info" %>
+        <%= link_to 'Sunburst', sunburst_datum_path(@datum), class: "btn btn-info" %>
       </div>
 
       <div class="bs-component">
