--- a/app/views/visualizations/edit.html.erb
+++ b/app/views/visualizations/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @visualization %> |
-<%= link_to 'Back', visualizations_path %>
+<%= link_to 'Back', @visualization.datum %>
