--- a/app/views/visualizations/index.html.erb
+++ b/app/views/visualizations/index.html.erb
@@ -8,7 +8,8 @@
       <th>Title</th>
       <th>Type</th>
       <th>Datum</th>
-      <th colspan="3"></th>
+      <th>User</th>
+      <th></th>
     </tr>
   </thead>
 
@@ -18,9 +19,8 @@
         <td><%= visualization.title %></td>
         <td><%= visualization.type %></td>
         <td><%= visualization.datum.name %></td>
+        <td><%= visualization.user.email %></td>
         <td><%= link_to 'Show', visualization %></td>
-        <td><%= link_to 'Edit', edit_visualization_path(visualization) %></td>
-        <td><%= link_to 'Destroy', visualization, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
