--- a/app/views/data/index.html.erb
+++ b/app/views/data/index.html.erb
@@ -2,28 +2,30 @@
 
 <h1>Listing Data</h1>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Last modified</th>
-      <th>Name</th>
-      <th>Items</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @data.each do |datum| %>
+<div class="table-wrapper">
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= I18n.l datum.updated_at.localtime %></td>
-        <td><%= datum.name %></td>
-        <td><%= datum.items.count %></td>
-        <td><%= link_to 'Show', datum %></td>
-        <td><%= link_to 'Edit', edit_datum_path(datum) %></td>
-        <td><%= link_to 'Destroy', datum, method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' %></td>
+        <th>Last modified</th>
+        <th>Name</th>
+        <th>Items</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+  
+    <tbody>
+      <% @data.each do |datum| %>
+        <tr>
+          <td><%= I18n.l datum.updated_at.localtime %></td>
+          <td><%= datum.name %></td>
+          <td><%= datum.items.count %></td>
+          <td><%= link_to 'Show', datum %></td>
+          <td><%= link_to 'Edit', edit_datum_path(datum) %></td>
+          <td><%= link_to 'Destroy', datum, method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 <%= link_to 'New Datum', new_datum_path, class: 'btn btn-success' %>
