--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -7,29 +7,31 @@
 
       <h4>Listing Visualizations</h4>
 
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>Title</th>
-            <th>Type</th>
-            <th>Datum</th>
-            <th></th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <% @datum.visualizations.each do |visualization| %>
+      <div class="table-wrapper">
+        <table class="table table-striped">
+          <thead>
             <tr>
-              <td><%= visualization.title %></td>
-              <td><%= visualization.type %></td>
-              <td><%= visualization.datum.name %></td>
-              <td><%= link_to 'Show', visualization, target: '_blank' %></td>
-              <td><%= link_to 'Edit', edit_visualization_path(visualization) %></td>
-              <td><%= link_to 'Destroy', visualization, method: :delete, data: { confirm: 'Are you sure?' }, class: "text-danger" %></td>
+              <th>Title</th>
+              <th>Type</th>
+              <th>Datum</th>
+              <th></th>
             </tr>
-          <% end %>
-        </tbody>
-      </table>
+          </thead>
+        
+          <tbody>
+            <% @datum.visualizations.each do |visualization| %>
+              <tr>
+                <td><%= visualization.title %></td>
+                <td><%= visualization.type.humanize %></td>
+                <td><%= visualization.datum.name %></td>
+                <td><%= link_to 'Show', visualization, target: '_blank' %></td>
+                <td><%= link_to 'Edit', edit_visualization_path(visualization) %></td>
+                <td><%= link_to 'Destroy', visualization, method: :delete, data: { confirm: 'Are you sure?' }, class: "text-danger" %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
 
       <div class="bs-component">
         <h4>Create visualizations</h4>
