--- a/app/views/visualizations/_form.html.erb
+++ b/app/views/visualizations/_form.html.erb
@@ -16,6 +16,8 @@
     <%= f.text_field :title, class: "form-control" %>
   </div>
 
+  <iframe src="<%= visualization_path @visualization %>" frameborder="0" height="400px" width="100%" style="border:1px dashed #bbb"></iframe>
+
   <div class="form-group label-static is-empty">
     <%= f.label :caption, class: "control-label" %>
     <%= f.text_field :caption, class: "form-control" %>
