--- a/app/views/visualizations/index.html.erb
+++ b/app/views/visualizations/index.html.erb
@@ -2,26 +2,28 @@
 
 <h1>Listing Visualizations</h1>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Type</th>
-      <th>Datum</th>
-      <th>User</th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @visualizations.each do |visualization| %>
+<div class="table-wrapper">
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= visualization.title %></td>
-        <td><%= visualization.type %></td>
-        <td><%= visualization.datum.name %></td>
-        <td><%= visualization.user.email %></td>
-        <td><%= link_to 'Show', visualization %></td>
+        <th>Title</th>
+        <th>Type</th>
+        <th>Datum</th>
+        <th>User</th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+  
+    <tbody>
+      <% @visualizations.each do |visualization| %>
+        <tr>
+          <td><%= visualization.title %></td>
+          <td><%= visualization.type.humanize %></td>
+          <td><%= visualization.datum.name %></td>
+          <td><%= visualization.user.email %></td>
+          <td><%= link_to 'Show', visualization %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
